kbase-extension/static/kbase/css/kbaseNarrative.css
/* ... */
.kb-func-panel > .panel-footer + .panel-collapse .panel-body {
  border-bottom-color: #bce8f1;
}

.kb-func-panel .panel-footer {
    /*background-color: #fff;
    border-top: none; */
    /*padding: 2px 15px;*/
}

/** output cell styling */
.kb-cell-output .panel {
    border-radius: 0px;
}

.kb-cell-output-content {
    overflow-x: auto;
    padding: 5px;
}

.kb-cell-output .panel .panel-heading {
    padding: 5px 10px;
}

.rendered_html .kb-cell-output ul {
    margin: 0 0 10px 0;
}

/* override from some jupyter style? */
.rendered_html :link {
  text-decoration: none;
}

.kb-cell-output .nav>li>a {
    padding: 5px 10px;
}

.kb-cell-error .panel-heading {
    background-image: none;
    padding: 5px 10px;
}
/*** styling for the jobs manager */
.kb-jobs-title {
    font-family: "OxygenBold", Arial, sans-serif;
    color: #185A85;
    font-size: 1.2em;
}

.kb-jobs-title .glyphicon-info-sign {
    font-size: 0.9em;
}

.kb-jobs-info-table {
    margin-top: 5px;
    width: 95%;
}

.kb-jobs-info-table th {
    font-family: "OxygenBold", Arial, sans-serif;
    color: #777;
    vertical-align:top;
    padding-right: 5px;

}

.kb-jobs-item {
    border-bottom: 2px solid #dddddd;
    margin-bottom: 5px;
    padding-bottom: 3px;
}

.kb-jobs-error {
    background-color: #f2dede;
}
.kb-jobs-error-btn {
    font-size: 10pt;
}
.kb-jobs-item:last-child {
    border-bottom: none;
}

.kb-jobs-error-modal {
    width: 485px;
    word-wrap: break-word;
    max-height: 220px;
    overflow-y: auto;
    overflow-x: hidden;
}

/** new method parameter styling **/
.kb-method-parameter-panel {
   border-left: 3px solid #fff;
}
.kb-method-parameter-panel-hover {
   border-left: 3px solid #428bca;
}
.kb-method-parameter-row {
   margin:0px;
   padding:5px;
   border-radius:5px;
}
/* for some reason, the css :hover doesn't work right on this div, so we use jquery to toggle this class */
.kb-method-parameter-row-hover {
   background:#F9F9F9;
}

.kb-method-parameter-row-error {
   background: #f2dede;
}
.kb-method-parameter-error-mssg {
   padding:5px;
   text-align:center;
   font-family: 'OxygenBold', sans-serif;
   font-weight: bold;
   font-size: 9pt;
   color:#F44336;
}


/* not sure how to get text in these divs to valign middle... */
.kb-method-parameter-name {
   font-family: 'OxygenBold', sans-serif;
   color:#777;
   text-align:right;
   vertical-align:middle;
   margin-top:3px;
   padding-right:0px;
   padding-left:0px;
}
.kb-method-parameter-input {
   vertical-align:middle;
   white-space: nowrap;
   padding-left:10px;
}
.kb-method-parameter-input input {
   font-weight: bold;
}

/*
This set of styles is a to accomodate the required/satisfied icon which appears 
between the select input control and the help text to the right of it. The 
problem is that within the columns used for layout the select is set to 100% width
and yet the icon is placed right next to it. The result is that the icon is shoved
to the right of the select control and into the next column, overlapping the
help text. The old method handling this was to scoot the help text far enough over 
to accomodate the the icon intruding into its space. This technique makes space
in the column in which the icon lives, and does this by shrinking the select
control with padding, and then scooting the icon back into its column.
*/
.kb-method-parameter-input > div {
    /* allow space for the required (red arrow), satisfied (green checkbox) icon */
    padding-right: 20px;
}
.kb-method-parameter-input .kb-method-parameter-accepted-glyph, 
.kb-method-parameter-input .kb-method-parameter-required-glyph {
    /* This scoots the icon inside */
    margin-left: -15px;
    font-size: 15px;
}
.kb-method-parameter-hint {
    padding-left: 7px;
}

.kb-parameter-data-selection {
   font-weight: bold;
}

.kb-method-parameter-hint {
   color: #777;
   text-align:left;
   margin-top:3px;
}

.kb-method-parameter-required-glyph {
   color: #F44336;
   margin-left:7px;
}
.kb-method-parameter-accepted-glyph {
   color: #4BB856;
   margin-left:7px;
}

.kb-method-parameter-info {
   color: #777;
   margin-left:7px;
}

.kb-parameter-data-row-remove {
   color: #777;
}
.kb-parameter-data-row-add {
   color: #777;
}


.kb-method-advanced-options-controller-inactive {
   font-family: 'OxygenBold', sans-serif;
   font-style: italic;
   font-size: 10pt;
   line-height: 14px;
   color: #777;
   text-align: center;
}
.kb-method-advanced-options-controller {
   font-family: 'OxygenBold', sans-serif;
   cursor:pointer;
   font-style: italic;
   font-size: 10pt;
   line-height: 14px;
   color: #0088cc;
   text-align: center;
}
.kb-method-advanced-options-controller:hover {
    color: #2a6496;
}

.kb-method-footer {
    width: 100%;
    overflow: none;
    background-color: #F5F5F5;
    padding: 10px;
}

.kb-method-subtitle {
    background-color: #F5F5F5;
    padding: 3px 5px;
}

/* -- App/method panel styling --*/

.kb-app-panel {
    border-radius: 0px;
}

.kb-app-error {
    background-color: #F2DEDE;
}

/*.app-panel-heading {
    padding-top: 10px;
}

/*.app-panel-heading h1 {
    font-family: 'Roboto';
    font-weight: normal;
    font-size: 16pt;
    line-height: 15px;
    color: #2E618D;
    margin: 3px;
    opacity: inherit;
    display: inline;
}
*/
.kb-app-step-container {
    margin-top: 6px;
}
.kb-app-panel > .panel-footer {
    border: 0;
    border-radius: 0px;
}

.kb-app-func-panel {
}

.kb-app-panel-description {
    font-family: 'Roboto';
    font-weight: normal;
    font-size: 12pt;
    line-height: 15px;
    color: #2E618D;
}
.kb-app-step-error-mssg {
   font-family: sans-serif;
   font-size: 11pt;
   line-height: 14px;
   color: #A63232;
   text-align: left;
   pading-left:30px;
   margin:10px;
}
.kb-app-step-error-heading {
   font-family: 'OxygenBold', sans-serif;
   font-size: 13pt;
   line-height: 14px;
   color: #555;
   text-align: left;
   padding-left:5px;
   margin-top:20px;
}
/* ... */

